Refactor validation error message using template